--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <a href="index.html"><img src="TechStore/storelogo.jpg" width="125px"></a>
             </div>
             <nav>
             <ul id="MenuItems">
@@ -24,8 +23,7 @@
                 <li><a href="account.html">Account</a></li>
             </ul>
             </nav>
-            <a href="cart.html"><img src="TechStore/cart.png" width="30px" height="30px"></a>
-            <img src="TechStore/menu.png" onclick="menutoggle()" class="menu-icon">
+            <img src="menu.png" onclick="menutoggle()" class="menu-icon">
         </div>
         <div class="row">
                 <div class="col-2">
@@ -43,7 +41,7 @@
                     <a href="#" class="btn">Explore Now &#8594;</a>
                 </div>
                 <div class="col-2">
-                <img src="TechStore/ecom2.webp">
+                <img src="ecom2.webp">
                 </div>
             
         </div>
@@ -55,13 +53,13 @@
             <h2 class="title">Deals In </h2>
         <div class="row">
             <div class="col-3">
-            <a href="product-details.html"><img src="TechStore/NVMe SSD.jpg"></a>
+            <a href="product-details.html"><img src="NVMe SSD.jpg"></a>
             </div> 
             <div class="col-3">
-            <img src="TechStore/key.jpg">
+            <img src="key.jpg">
             </div> 
             <div class="col-3">
-            <img src="TechStore/think.webp">
+            <img src="think.webp">
             </div> 
         </div>
     </div>
@@ -72,7 +70,7 @@
         <div class="row">
             <div class="col-4">
                 
-                <a href="product-details.html"><img src="TechStore/Crucial 8BG ram.jpg"></a>
+                <a href="product-details.html"><img src="Crucial 8BG ram.jpg"></a>
                 <h4><a href="product-details.html">Crucial RAM 8GB DDR4 3200MHz CL22 (or 2933MHz or 2666MHz) Laptop Memory CT8G4SFRA32A</a></h4>
                 <div class="rating">
                 <i class="fa fa-star"></i>
@@ -84,7 +82,7 @@
                 <p>Rs 1499.00</p>
             </div> 
             <div class="col-4">
-                <img src="TechStore/Crucial2.jpg">
+                <img src="Crucial2.jpg">
                 <h4>Crucial RAM 32GB DDR4 3200MHz CL22 (or 2933MHz or 2666MHz) Laptop Memory CT32G4SFD832A </h4>
                 <div class="rating">
                 <i class="fa fa-star"></i>
@@ -96,7 +94,7 @@
                 <p>Rs 6114.00</p>
             </div> 
             <div class="col-4">
-                <img src="TechStore/Dell.jpg">
+                <img src="Dell.jpg">
                 <h4>Dell 14 (2021) Intel i5-1135G7 Laptop, 8GB, 512GB SSD, Windows 10 + MS Office, Integrated Graphics, 14.0 inches FHD Display, Accent Black (Vostro 3400, D552204WIN9BE), 1.59kg</h4>
                 <div class="rating">
                 <i class="fa fa-star"></i>
@@ -108,7 +106,7 @@
                 <p>Rs 50900.00</p>
             </div> 
                 <div class="col-4">
-                <img src="TechStore/Dell re.jpg  ">
+                <img src="Dell re.jpg  ">
                 <h4>(Refurbished) Dell Latitude E5470 Intel Core i5 6th Gen.6200u Processor 14.1 Inches HD Screen Notebook Computer (8 GB Ram & 256 GB SSD, Windows 10 Pro, 1.71Kg)</h4>
                 <div class="rating">
                 <i class="fa fa-star"></i>
@@ -123,7 +121,7 @@
         <h2 class="title">Latest Products</h2>
             <div class="row">
             <div class="col-4">
-                <img src="TechStore/Dell 2.jpg">
+                <img src="Dell 2.jpg">
                 <h4>(Refurbished) DELL LATITUDE 7390 (Core i5 8th GEN/ 8GB RAM/ 256GB SSD/ WEBCAM/ 13.3'' NON TOUCH/ WIN-10</h4>
                 <div class="rating">
                 <i class="fa fa-star"></i>
@@ -135,7 +133,7 @@
                 <p>Rs 23999.00</p>
             </div> 
             <div class="col-4">
-                <img src="TechStore/i3 10.jpg">
+                <img src="i3 10.jpg">
                 <h4>Intel Core i3-10100F 10th Generation LGA1200 Desktop Processor 4, 4 Cores 8 Threads up to 4.30GHz 6MB Cache</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -147,7 +145,7 @@
                 <p>Rs 6299.00</p>
             </div> 
             <div class="col-4">
-                <img src="TechStore/Giga motherboard.jpg">
+                <img src="Giga motherboard.jpg">
                 <h4>GIGABYTE B450M DS3H V2 (AMD Ryzen AM4/Micro ATX/M.2/HMDI/DVI/USB 3.1/DDR4/Motherboard)</h4>
                 <div class="rating">
                 <i class="fa fa-star"></i>
@@ -159,7 +157,7 @@
                 <p>Rs 7000.00</p> 
             </div> 
                 <div class="col-4">
-                <img src="TechStore/WD green1899.webp">
+                <img src="WD green1899.webp">
                 <h4>Western Digital WD Green SATA 240GB, Up to 545MB/s, 2.5 Inch/7 mm, 3Y Warranty, Internal Solid State Drive (SSD) (WDS240G3G0A)</h4>
                 <div class="rating">
                 <i class="fa fa-star"></i>
@@ -173,7 +171,7 @@
         </div>
         <div class="row">
             <div class="col-4">
-                <img src="TechStore/key.jpg">
+                <img src="key.jpg">
                 <h4>Dell USB Wireless Keyboard and Mouse Set- KM3322W, Anti-Fade & Spill-Resist</h4>
                 <div class="rating">
                 <i class="fa fa-star"></i>
@@ -185,7 +183,7 @@
                 <p>Rs 1349.00</p> 
             </div> 
             <div class="col-4">
-                <img src="TechStore/Lenovo tiny.jpg">
+                <img src="Lenovo tiny.jpg">
                 <h4>Lenovo (Renewed) Thinkcentre M700 Desktop Mini Pc (Intel Core I3 6Th Gen,8 Gb Ddr4 Ram,256 Gb Ssd,Wifi,Windows 11,Ms Office,Intel Hd Graphics,Usb,Dp)Black</h4>
                 <div class="rating">
                 <i class="fa fa-star"></i>
@@ -197,7 +195,7 @@
                 <p>Rs 9299.00</p>
             </div> 
             <div class="col-4">
-                <img src="TechStore/Tiny2.jpg">
+                <img src="Tiny2.jpg">
                 <h4>(Refurbished) Lenovo ThinkCentre Desktop Computer PC (Intel Core i7 2600/ 16 GB RAM/ 1 TB HDD + 256 GB SSD/ Windows 10 Pro/ MS Office/ Intel HD Graphics/ USB/ Ethernet/WiFi), Black</h4>
                 <div class="rating">
                 <i class="fa fa-star"></i>
@@ -209,7 +207,7 @@
                 <p>Rs 18360.00</p>
             </div> 
                 <div class="col-4">
-                <img src="TechStore/Zeb key.jpg">
+                <img src="Zeb key.jpg">
                 <h4>Zebronics War Gaming Keyboard and Mouse Combo,Gold Plated USB, Braided Cable,Multicolour LEDs/Gaming Mouse with breathing LEDs and 3200 DPI</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -229,7 +227,7 @@
     <div class="small-container">
         <div class="row">
         <div class="col-2">
-            <img src="TechStore/Dell 7390.webp" class="offer-img">
+            <img src="Dell 7390.webp" class="offer-img">
         </div>
         <div class="col-2">
             <p>Exclusively Available on Tech Tech Store</p>
@@ -258,7 +256,7 @@
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star-o"></i>
                     </div>
-                    <img src="TechStore/user-2.png">
+                    <img src="user-2.png">
                     <h3>Pratik Sharma</h3>
         </div>
             <div class="col-3">
@@ -271,7 +269,7 @@
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star-o"></i>
                     </div>
-                    <img src="TechStore/User24.jpeg">
+                    <img src="User24.jpeg">
                     <h3>Suraj Kumar</h3>
         </div>
             <div class="col-3">
@@ -284,7 +282,7 @@
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star-o"></i>
                     </div>
-                    <img src="TechStore/user3.jpg">
+                    <img src="user3.jpg">
                     <h3>Shubham Baloni</h3>
         </div>
     </div>
@@ -295,22 +293,22 @@
         <div class="small-container">
             <div class="row">
                 <div class="col-5">
-                    <img src="TechStore/samsung logo.png">
+                    <img src="samsung logo.png">
                 </div>
                 <div class="col-5">
-                    <img src="TechStore/zebronicx logo.webp">
+                    <img src="zebronicx logo.webp">
                 </div>
                 <div class="col-5">
-                    <img src="TechStore/consi.png">
+                    <img src="consi.png">
                 </div>
                 <div class="col-5">
-                    <img src="TechStore/Geonix logo.png">
+                    <img src="Geonix logo.png">
                 </div>
                 <div class="col-5">
-                    <img src="TechStore/Western-Digital-logo.png">
+                    <img src="Western-Digital-logo.png">
                 </div>
                 <div class="col-5">
-                    <img src="TechStore/intel.webp"
+                    <img src="intel.webp"
                 </div>
             </div>
         </div>
@@ -324,12 +322,12 @@
             <h3>Download Our App</h3>
                 <p>Download App for Android and ios mobile phone.</p>
                 <div class="app-logo">
-                    <img src="TechStore/play-store.png">
-                    <img src="TechStore/app-store.png">
+                    <img src="play-store.png">
+                    <img src="app-store.png">
                 </div>
             </div>
             <div class="footer-col2">
-            <img src="TechStore/storelogo.jpg">
+            <img src="storelogo.jpg">
                 <p>The purpose of a Tech Tech Store is to provide a retail space where customers can purchase various types of technology products and related accessories.</p>
             </div>
             <div class="footer-col3">
