--- a/cart.html
+++ b/cart.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <a href="index.html"><img src="TechStore/storelogo.jpg" width="125px"></a>
+                <a href="index.html"><img src="storelogo.jpg" width="125px"></a>
             </div>
             <nav>
             <ul id="MenuItems">
@@ -23,8 +23,8 @@
                 <li><a href="account.html">Account</a></li>
             </ul>
             </nav>
-            <a href="cart.html"><img src="TechStore/cart.png" width="30px" height="30px"></a>
-            <img src="TechStore/menu.png" onclick="menutoggle()" class="menu-icon">
+            <a href="cart.html"><img src="cart.png" width="30px" height="30px"></a>
+            <img src="menu.png" onclick="menutoggle()" class="menu-icon">
         </div>
         
     </div>
@@ -43,7 +43,7 @@
     <tr>
         <td>
             <div class="cart-info">
-                <img src="TechStore/Crucial 8BG ram.jpg">
+                <img src="Crucial 8BG ram.jpg">
                 <div>
                     <p>Crucial RAM 8GB DDR4 3200MHz CL22 (or 2933MHz or 2666MHz) Laptop Memory CT8G4SFRA32A</p>
                     <small>Price: Rs 1499.00</small><br>
@@ -57,7 +57,7 @@
     <tr>
         <td>
             <div class="cart-info">
-                <img src="TechStore/WD green1899.webp">
+                <img src="WD green1899.webp">
                 <div>
                     <p>Western Digital WD Green SATA 240GB, Up to 545MB/s, 2.5 Inch/7 mm, 3Y Warranty, Internal Solid State Drive (SSD) (WDS240G3G0A)</p>
                     <small>Price: Rs 1899.00</small><br>
@@ -71,7 +71,7 @@
     <tr>
         <td>
             <div class="cart-info">
-                <img src="TechStore/key.jpg">
+                <img src="key.jpg">
                 <div>
                     <p>Dell USB Wireless Keyboard and Mouse Set- KM3322W, Anti-Fade & Spill-Resist</p>
                     <small>Price: Rs 1349.00</small><br>
@@ -116,12 +116,12 @@
             <h3>Download Our App</h3>
                 <p>Download App for Android and ios mobile phone.</p>
                 <div class="app-logo">
-                    <img src="TechStore/play-store.png">
-                    <img src="TechStore/app-store.png">
+                    <img src="play-store.png">
+                    <img src="app-store.png">
                 </div>
             </div>
             <div class="footer-col2">
-            <img src="TechStore/storelogo.jpg">
+            <img src="storelogo.jpg">
                 <p>The purpose of a Tech Tech Store is to provide a retail space where customers can purchase various types of technology products and related accessories.</p>
             </div>
             <div class="footer-col3">
